--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,48 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.movies {
+    display: flex;
+    overflow-x: auto;
+    white-space: nowrap;
+    -webkit-overflow-scrolling: touch;
+    &::-webkit-scrollbar {
+      display: none;
+    }
 }
+.top-product-img{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+  }
+.image {
+    position: relative;
+    z-index:1;
+    width: 300px;
+    height: 200px;
+    border-radius: 10px;
+    margin: 5px;
+  }
+  .image::after{
+    content:"";
+    position:absolute;
+    background: linear-gradient(0deg,        rgba(39,38,42,1) 0%, rgba(255,255,255,0)     80%);
+    z-index:2;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    top:0;
+    left:0;
+  }
+  
+  .image__text {
+    font-size: 1.5rem;
+    position: absolute;
+    bottom: 10%;
+    color: #fff;
+    left: 2%;
+    font-weight: bolder;
+    z-index:3;
+    width: 80%
+  }
