--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-.movies {
+.horizontal-scroll {
     display: flex;
     overflow-x: auto;
     white-space: nowrap;
@@ -40,7 +40,6 @@
     font-size: 1.5rem;
     position: absolute;
     bottom: 10%;
-    color: #fff;
     left: 2%;
     font-weight: bolder;
     z-index:3;
@@ -48,7 +47,7 @@
   }
 
   .body-view{
-    width: 80%;
+    width: 70%;
     margin: auto;
     /* background-color: aquamarine; */
   }
@@ -74,5 +73,21 @@
   }
 
   .latest-view{
-    background-color: #6939b569;
+    /* background-color: #fff; */
+  }
+  .footer-container {
+    width: 100%;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+    margin-bottom: 30px;
+  }
+  
+  .footer-heading {
+    color: black;
+  }
+  .fotter-normal-text {
+    color: grey;
+    padding: 5px;
   }
